adicionado svgs no index HTML

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello World</h1>
     <h6>Aprendendo GIT e GITHUB</h6>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis nesciunt tempora earum doloribus vitae! Facilis iste dolor cupiditate ipsam ratione magnam, quam dolorum aperiam exercitationem obcaecati. Perferendis laudantium molestias modi!</p>
+    <img src="assets/svgs/icon-user.svg">
 </body>
 </html>
